manifests/prayingtimes-timeskeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prayingtymes-timeskeeper-service
  labels:
    app: prayingtymes-timeskeeper
spec:
  selector:
    app: prayingtymes-timeskeeper
  ports:
    - name: http-8080
      port: 8080
