manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  annotations:
    ingress.cilium.io/service-type: NodePort
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - backend:
              service:
                name: prayingtymes-timeskeeper-service
                port:
                  number: 8080
            path: /timeskeeper
            pathType: Prefix
